--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         </div>
       </section>
       <!-- section features -->
-      <section class="features section-padding">
-        <h2 class="header-features" hidden>Features</h2>
+      <section class="features">
+        <h2 class="visually-hidden">Features</h2>
         <div class="container">
           <ul class="menu-features list">
             <li class="menu-items-features">
@@ -77,7 +77,7 @@
         </div>
       </section>
       <!-- section our team -->
-      <section class="team section-padding">
+      <section class="team">
         <h2 class="our-team-header">Our Team</h2>
         <div class="container">
           <ul class="our-team-list list">
