--- a/portfolio.html
+++ b/portfolio.html
@@ -33,9 +33,9 @@
     </header>
     <main>
         <!-- section our project -->
-        <section>
-            <div class="btns-container container">
-                <h1 hidden>Projects</h1>
+        <section class="portfolio">
+            <h1 class="visually-hidden">Projects</h1>
+            <div class="projects-container container">
                 <ul class="menu-projects-list list">
                     <li class="menu-projects-item"><button class="menu-projects-btn btns" type="button">All</button></li>
                     <li class="menu-projects-item"><button class="menu-projects-btn btns" type="button">Web Site</button></li>
@@ -43,77 +43,86 @@
                     <li class="menu-projects-item"><button class="menu-projects-btn btns" type="button">Design</button></li>
                     <li class="menu-projects-item"><button class="menu-projects-btn btns" type="button">Marketing</button></li>
                 </ul>
-            </div>
-            <div class="projects-container container">
                 <ul class="our-projects-list list">
                     <li class="our-projects-item">
                         <a href="" class="our-projects-link link">
                             <img class="our-projects-img" src="./images/interface-concept1.jpg" alt="Banking App Interface Concept" width="360" height="300">
-                            <h2 class="our-projects-header">Banking App Interface Concept</h2>
-                            <p class="our-projects-text">App</p>
+                            <div class="projects-content">
+                                <h2 class="our-projects-header">Banking App Interface Concept</h2>
+                                <p class="our-projects-text">App</p>
+                            </div>
                         </a>
                     </li>
                     <li class="our-projects-item">
                         <a href="" class="our-projects-link link">
                             <img class="our-projects-img" src="./images/cashless-payment2.jpg" alt="phone payment" width="360" height="300">
-                            <h2 class="our-projects-header">Cashless Payment</h2>
+                                <div class="projects-content">
+                                <h2 class="our-projects-header">Cashless Payment</h2>
                             <p class="our-projects-text">Marketing</p>
+                            </div>
                         </a>
                     </li>
                     <li class="our-projects-item">
                         <a href="" class="our-projects-link link">
                             <img class="our-projects-img" src="./images/meditation-app3.jpg" alt="laptop and iphone" width="360" height="300">
-                            <h2 class="our-projects-header">Meditation App</h2>
+                                <div class="projects-content">
+                                <h2 class="our-projects-header">Meditation App</h2>
                             <p class="our-projects-text">App</p>
+                            </div>
                         </a>
                     </li>
                     <li class="our-projects-item">
                         <a href="" class="our-projects-link link">
                             <img class="our-projects-img" src="./images/taxi-service1.jpg" alt="car" width="360" height="300">
-                            <h2 class="our-projects-header">Taxi Service</h2>
-                            <p class="our-projects-text">Marketing</p>
+                            <div class="projects-content">
+                                <h2 class="our-projects-header">Taxi Service</h2>
+                                <p class="our-projects-text">Marketing</p>
+                            </div>
                         </a>
                     </li>
                     <li class="our-projects-item">
                         <a href="" class="our-projects-link link">
                             <img class="our-projects-img" src="./images/screen-illustrations2.jpg" alt="wallpaper for phone" width="360" height="300">
-                            <h2 class="our-projects-header">Screen Illustrations</h2>
-                            <p class="our-projects-text">Design</p>
+                            <div class="projects-content">
+                                <h2 class="our-projects-header">Screen Illustrations</h2>
+                                <p class="our-projects-text">Design</p>
+                            </div>
                         </a>
                     </li>
                     <li class="our-projects-item">
                         <a href="" class="our-projects-link link">
                             <img class="our-projects-img" src="./images/online-courses3.jpg" alt="women with phone" width="360" height="300">
-                            <h2 class="our-projects-header">Online Courses</h2>
-                            <p class="our-projects-text">Marketing</p>
+                            <div class="projects-content">
+                                <h2 class="our-projects-header">Online Courses</h2>
+                                <p class="our-projects-text">Marketing</p>
+                            </div>
                         </a>
                     </li>
                     <li class="our-projects-item">
                         <a href="" class="our-projects-link link">
                             <img class="our-projects-img" src="./images/insta-stories1.jpg" alt="app interfaces" width="360" height="300">
-                            <h2 class="our-projects-header">Instagram Stories Concept</h2>
+                                <div class="projects-content">
+                                <h2 class="our-projects-header">Instagram Stories Concept</h2>
                             <p class="our-projects-text">Design</p>
+                            </div>
                         </a>
                     </li>
                     <li class="our-projects-item">
                         <a href="" class="our-projects-link link">
                             <img class="our-projects-img" src="./images/organic-food2.jpg" alt="bag with wegetables" width="360" height="300">
-                            <h2 class="our-projects-header">Organic Food</h2>
+                                <div class="projects-content">
+                                <h2 class="our-projects-header">Organic Food</h2>
                             <p class="our-projects-text">Web Site</p>
+                            </div>
                         </a>
                     </li>
                     <li class="our-projects-item">
                         <a href="" class="our-projects-link link">
                             <img class="our-projects-img" src="./images/fresh-coffee3.jpg" alt="capuchino" width="360" height="300">
-                            <h2 class="our-projects-header">Fresh Coffee</h2>
-                            <p class="our-projects-text">Web Site</p>
-                        </a>
-                    </li>
-                     <li class="our-projects-item">
-                        <a href="" class="our-projects-link link">
-                            <img class="our-projects-img" src="./images/fresh-coffee3.jpg" alt="capuchino" width="360" height="300">
-                            <h2 class="our-projects-header">Fresh Coffee</h2>
-                            <p class="our-projects-text">Web Site</p>
+                            <div class="projects-content">
+                                <h2 class="our-projects-header">Fresh Coffee</h2>
+                                <p class="our-projects-text">Web Site</p>
+                            </div>
                         </a>
                     </li>
                 </ul>
