--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </section>
       <!-- section features -->
       <section class="features">
-        <h2 class="visually-hidden">Features</h2>
+        <h2 class="visually-hidden" hidden>Features</h2>
         <div class="container">
           <ul class="menu-features list">
             <li class="menu-items-features">
