--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
     <main>
       <!-- hero -->
       <section class="hero">
-        <div class="block-hero container">
+        <div class="container">
           <h1 class="main-header">Effective Solutions for Your Business</h1>
           <button type="button" class="main-btn btns">Order Service</button>
         </div>
       </section>
       <!-- section features -->
       <section class="features">
-        <h2 class="visually-hidden" hidden>Features</h2>
         <div class="container">
+          <h2 class="visually-hidden">Features</h2>
           <ul class="menu-features list">
             <li class="menu-items-features">
               <h3 class="menu-items-header">Strategy</h3>
@@ -67,8 +67,8 @@
       </section>
       <!-- section what are we doing -->
       <section class="project">
-        <h2 class="projects-header">What are we doing</h2>
         <div class="container">
+          <h2 class="projects-header">What are we doing</h2>
           <ul class="projects-list list">
             <li class="projects-list-items"><img class="projects-img" src="./images/monitor1.jpg" alt="Monitor" width="360" height="300"></li>
             <li class="projects-list-items"><img class="projects-img" src="./images/iphone2.jpg" alt="Iphone" width="360" height="300"></li>
@@ -78,28 +78,36 @@
       </section>
       <!-- section our team -->
       <section class="team">
-        <h2 class="our-team-header">Our Team</h2>
         <div class="container">
+          <h2 class="our-team-header">Our Team</h2>
           <ul class="our-team-list list">
             <li class="our-team-item">
               <img class="teammate-img" src="./images/mark-guerrero1.jpg" alt="Mark Guerrero photo" width="264" height="260">
-              <h3 class="teammate-name">Mark Guerrero</h3>
-              <p class="teammate-profession">Product Designer</p>
+              <div class="teammate-text">
+                <h3 class="teammate-name">Mark Guerrero</h3>
+                <p class="teammate-profession">Product Designer</p>
+              </div>
             </li>
             <li class="our-team-item">
               <img class="teammate-img" src="./images/tom-ford2.jpg" alt="Tom Ford photo" width="264" height="260">
-              <h3 class="teammate-name">Tom Ford</h3>
-              <p class="teammate-profession">Frontend Developer</p>
+              <div class="teammate-text">
+                <h3 class="teammate-name">Mark Guerrero</h3>
+                <p class="teammate-profession">Product Designer</p>
+              </div>
             </li>
             <li class="our-team-item">
               <img class="teammate-img" src="./images/camila-garcia3.jpg" alt="Camila Garcia photo" width="264" height="260">
-              <h3 class="teammate-name">Camila Garcia</h3>
-              <p class="teammate-profession">Marketing</p>
+              <div class="teammate-text">
+                <h3 class="teammate-name">Mark Guerrero</h3>
+                <p class="teammate-profession">Product Designer</p>
+              </div>
             </li>
             <li class="our-team-item">
               <img class="teammate-img" src="./images/daniel-wilson4.jpg" alt="DanielWilson photo" width="264" height="260">
-              <h3 class="teammate-name">Daniel Wilson</h3>
-              <p class="teammate-profession">UI Designer</p>
+              <div class="teammate-text">
+                <h3 class="teammate-name">Mark Guerrero</h3>
+                <p class="teammate-profession">Product Designer</p>
+              </div>
             </li>
           </ul> 
         </div> 
